# do-hoa-may-tinh

./: .dockerignore  .gitignore  CMakeLists.txt  CMakeLists_Windows.txt  CMakeLists_macOS.txt  Camera.h  Dockerfile  GETTING_STARTED.md  PROJECT_STRUCTURE.md  README.md  README_BUILD.md  README_MACOS.md  README_WINDOWS.md  Shader.h  TASKS.md  build.bat  build.sh  main.cpp  run_docker.sh  test.fs
core/: Scene.h  TimeOfDay.cpp  TimeOfDay.h
glad/include/glad/: glad.h
glad/src/: glad.c
models/: Mesh.cpp  Mesh.h  Primitives.cpp  Primitives.h  Texture.cpp  Texture.h
objects/: Bird.cpp  Bird.h  Cloud.cpp  Cloud.h  CotCo.cpp  CotCo.h  Fence.cpp  Fence.h  Guard.cpp  Guard.h  Lang.cpp  Lang.h  StreetLight.cpp  StreetLight.h  Tree.cpp  Tree.h
rendering/: Light.h
shaders/: cloud.fs  cloud.vs  lighting.fs  lighting.vs  lighting_v3.fs  lighting_v4.fs  lighting_v4.vs  shadow_mapping_depth.fs  sky.fs  sky.vs  texture.fs  texture.vs
